# pbapi

./: .codeclimate.yml  .gitignore  .pylintrc  LICENSE  README.md  appwrite.json  db_backup.py  db_migration.py  docker-compose.local.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-appwrite.yml  deploy-aws.yml.disabled  main.yml
alembic/: env.py  script.py.mako
alembic/versions/: 000_legacy_schema.py  000_legacy_schema_down.sql  000_legacy_schema_up.sql  001_initial_schema.py  001_initial_schema_down.sql  001_initial_schema_up.sql  002_shop_address.py  003_conflicting_schema.py  003_conflicting_schema_down.sql  003_conflicting_schema_up.sql
appwrite_functions/: .gitignore  requirements.txt
aws_infra/: cdk.json  package-lock.json  package.json
aws_infra/app/: cdk.ts  constants.ts  pbapi-stack.ts
aws_infra/test/: cdk.test.ts
src/: constants.py  main.py
src/adapters/: doppler.py
src/adapters/db/: base.py  postgresql.py  sqlite.py
src/adapters/rest/: appwrite_fastapi_adapter.py  appwrite_functions.py  fastapi_app.py  fastapi_routes.py
src/handlers/: add_barcodes.py  link_shop.py  parse_from_url.py  search.py  shops.py  user_identity.py  vendor.py
src/helpers/: common.py  osm.py
src/router/: health.py
src/schemas/: barcode.py  common.py  osm_data.py  product.py  purchased_item.py  receipt.py  receipt_url.py  request_schemas.py  response_schemas.py  schema_base.py  shop.py  shop_item.py  user.py  user_auth.py  user_identity.py  user_session.py  vendor.py
src/schemas/sfs_md/: receipt.py
src/tests/: test_main.py
(+4 files in other folders)
